--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hugo/themes/dot"]
 	path = hugo/themes/dot
-	url = git@github.com:themefisher/dot-hugo-documentation-theme.git
+	url = https://github.com/themefisher/dot.git
