--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hugo/themes/dot"]
-	path = hugo/themes/dot
-	url = https://github.com/themefisher/dot.git
+[submodule "themes/dot"]
+	path = themes/dot
+	url = https://github.com/themefisher/dot-hugo-documentation-theme.git
