--- a/config.toml
+++ b/config.toml
@@ -71,7 +71,7 @@ link = "https://linkedin.com/company/puzzle-itc"
   languageCode = "en-us"
   weight = 1
   home = "Home"
-  copyright = "The Techlabs are copyright &copy; [Puzzle ITC](https://puzzle.ch) 2020."
+  copyright = "Ansible Techlabs are copyright &copy; [Puzzle ITC](https://puzzle.ch) 2020."
 
     # navigation
     [Languages.en.menu]
