--- a/resources/ansible-pull/local.yml
+++ b/resources/ansible-pull/local.yml
@@ -2,6 +2,7 @@
 - hosts: all
   tasks:
   - name: set the MOTD using ansible-pull
+    become: yes
     copy:
       src: motd
       dest: /etc/motd
