--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,9 +19,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '15.x'
-      - 
-        name: Lint Markdown
-        run: npm ci && npm run mdlint
+#      - 
+#        name: Lint Markdown
+#        run: npm ci && npm run mdlint
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
