--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -5,7 +5,7 @@ acendTraining:
       name: puzzle
       replicaCount: 1
       image:
-        repository: quay.io/puzzle/ansible-basics-training
+        repository: quay.io/puzzle/ansible-training
         pullPolicy: Always
         tag: ""
         tagsuffix: ""
@@ -13,7 +13,7 @@ acendTraining:
         annotations: 
           kubernetes.io/ingress.class: nginx-public
         useDefaultSecret: true
-        appname: prometheus-training
+        appname: ansible-training
         domainmain: puzzle.ch
         domain: k8s.puzzle.ch
 
