--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -17,7 +17,7 @@ acendTraining:
         domainmain: puzzle.ch
         domain: k8s.puzzle.ch
 
-nameOverride: "ansible-basics"
+nameOverride: "ansible-training"
 fullnameOverride: ""
 
 serviceAccount:
