--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ansible-training",
+  "name": "ansible",
   "version": "0.0.9",
   "description": "Ansible Training",
   "repository": {
