--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -99,4 +99,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           message: |
            PR Environments: 
-           *  puzzle <https://ansible-training-pr-${{ github.event.pull_request.number }}.k8s.puzzle.ch>
+           *  puzzle <https://ansible-pr-${{ github.event.pull_request.number }}.k8s.puzzle.ch>
