switch bworkflow trigger for build-slides to run when pushing to dev branch

--- a/.github/workflows/build-slides.yaml
+++ b/.github/workflows/build-slides.yaml
@@ -2,6 +2,8 @@ name: Build Slides for Training and Publish
 
 on:
   pull_request:
+    branches:
+      - 'add/slides_to_rancher'
     paths:
       - 'slides/*'
 
