--- a/.github/workflows/build-slides.yaml
+++ b/.github/workflows/build-slides.yaml
@@ -3,7 +3,7 @@ name: Build Slides for Training and Publish
 on:
   pull_request:
     paths:
-      - 'slides/*'
+      - 'slides/**'
 
 jobs:
   build:
