--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -13,8 +13,8 @@ RUN git clone https://github.com/hakimel/reveal.js.git reveal \
 
 WORKDIR reveal
 
-COPY ansible-techlab ./ansible-techlab
-COPY index.html.patch .
+COPY slides/ansible-techlab ./ansible-techlab
+COPY slides/index.html.patch .
 
 RUN patch --forward --strip=1 --input=index.html.patch \
  && npm install && npm run build -- css-themes
