avoid traing build when pushing to slides folder; try fix Dockerfile secret

--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -1,7 +1,6 @@
 FROM node
 
-RUN --mount=type=secret,id=gitlab_token \
-  cat /run/secrets/gitlab_token
+RUN --mount=type=secret,id=gitlab_token PULLSECRET=$(cat /run/secrets/gitlab_token)
 
 WORKDIR /app
 
