--- a/yaml/slides_prod/slides_deployment_prod.yaml
+++ b/yaml/slides_prod/slides_deployment_prod.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       affinity: {}
       containers:
-      - image: quay.io/puzzle/ansible-training-slides
+      - image: quay.io/puzzle/ansible-training-slides:latest
         imagePullPolicy: Always
         name: slides
         ports:
