--- a/.github/workflows/pr-cleanup-slides.yaml
+++ b/.github/workflows/pr-cleanup-slides.yaml
@@ -27,11 +27,11 @@ jobs:
           mkdir -p $HOME/.kube
           echo "$KUBE_CONFIG" > $HOME/.kube/config
       - 
-        name: Remove PR Environment Helm Release
+        name: Remove Slides test Environment
         env:
           TRAINING_NAMESPACE: 'pitc-ansible-training-test'
         run: |
-          kubectl remove deployment/ansible-slides --kubeconfig $HOME/.kube/config --namespace $TRAINING_NAMESPACE
+          kubectl delete deployment/ansible-slides --kubeconfig $HOME/.kube/config --namespace $TRAINING_NAMESPACE
 
       - name: Delete Tags on Quay
         id: delete_tags
