change traingin triggers to use paths-ignore

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,8 +2,8 @@ name: Build Training and Publish
 
 on:
   pull_request:
-    paths:
-      - '!slides/**'
+    paths-ignore:
+      - 'slides/**'
 
 jobs:
   build:
