--- a/.github/workflows/push-main.yaml
+++ b/.github/workflows/push-main.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches: 
       - master
-    paths:
-      - '!slides/**'
+    paths-ignore:
+      - 'slides/**'
 
 jobs:
   build:
