--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -20,4 +20,4 @@ RUN patch --forward --strip=1 index.html --input=index.html.patch \
 
 EXPOSE 8000
 
-CMD ["npm", "start", "--host=0.0.0.0"]
+CMD ["npm", "start", "--", "--host=0.0.0.0"]
