--- a/.github/workflows/build-slides.yaml
+++ b/.github/workflows/build-slides.yaml
@@ -63,7 +63,7 @@ jobs:
       - 
         name: Create KUBECONFIG
         env:
-          KUBE_CONFIG: '${{ secrets.KUBECONFIG_TEST }}'
+          KUBE_CONFIG: '${{ secrets.KUBECONFIG_OC_STG }}'
         run: |
           mkdir -p $HOME/.kube
           echo "$KUBE_CONFIG"
@@ -71,6 +71,6 @@ jobs:
       - 
         name: Deploy RevealJS Test
         env:
-          TRAINING_NAMESPACE: 'pitc-ansible-training-test'
+          TRAINING_NAMESPACE: 'pitc-ansible-training-stg'
         run: |
           kubectl rollout restart deployment/ansible-slides --kubeconfig $HOME/.kube/config --namespace $TRAINING_NAMESPACE
