--- a/.github/workflows/pr-cleanup-slides.yaml
+++ b/.github/workflows/pr-cleanup-slides.yaml
@@ -22,7 +22,7 @@ jobs:
       - 
         name: Create KUBECONFIG
         env:
-          KUBE_CONFIG: '${{ secrets.KUBECONFIG_TEST }}'
+          KUBE_CONFIG: '${{ secrets.KUBECONFIG_OC_STG }}'
         run: |
           mkdir -p $HOME/.kube
           echo "$KUBE_CONFIG" > $HOME/.kube/config
