--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,21 +72,17 @@ jobs:
         with:
           version: v1.21.2
       - 
-        name: Create KUBECONFIG
+        name: Get SA Token
         env:
-          KUBE_CONFIG: '${{ secrets.KUBECONFIG_OC_STG }}'
-        run: |
-          mkdir -p $HOME/.kube
-          echo "$KUBE_CONFIG"
-          echo "$KUBE_CONFIG" > $HOME/.kube/config
       - 
         name: Deploy Helm Release
         env:
           TRAINING_HELM_RELEASE: 'pr-${{ github.event.pull_request.number }}'
           TRAINING_NAMESPACE: 'pitc-ansible-training-stg'
           TRAINING_VERSION: '${{ github.sha }}'
+          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_STG }}'
         run: |
-          helm upgrade $TRAINING_HELM_RELEASE acend-training-chart --install --wait --kubeconfig $HOME/.kube/config  --namespace=$TRAINING_NAMESPACE --set=app.name=$HELM_RELEASE --set=app.version=$TRAINING_VERSION --repo=https://acend.github.io/helm-charts/ --values=helm-chart/values.yaml --atomic
+          helm upgrade $TRAINING_HELM_RELEASE acend-training-chart --install --wait --kube-token $KUBE_TOKEN --namespace=$TRAINING_NAMESPACE --set=app.name=$HELM_RELEASE --set=app.version=$TRAINING_VERSION --repo=https://acend.github.io/helm-charts/ --values=helm-chart/values.yaml --atomic
       - 
         name: Redeploy Deployments
         env:
