--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -89,7 +89,7 @@ jobs:
           KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_STG }}'
           KUBE_URL: '${{ secrets.OPENSHIFT_API_URL }}'
         run: |
-          kubectl rollout restart deployment/$TRAINING_HELM_RELEASE-ansible-puzzle --token=$KUBE_TOKEN --namespace $TRAINING_NAMESPACE
+          kubectl rollout restart deployment/$TRAINING_HELM_RELEASE-ansible-puzzle --server=$KUBE_URL --token=$KUBE_TOKEN --namespace $TRAINING_NAMESPACE
       - 
         name: Comment on PR
         uses: marocchino/sticky-pull-request-comment@v2
