add emptyTLS parameter to values.yaml

--- a/helm-chart/values_openshift.yaml
+++ b/helm-chart/values_openshift.yaml
@@ -15,6 +15,7 @@ acendTraining:
         appname: ansible
         domainmain: puzzle.ch
         domain: ocp.cloudscale.puzzle.ch
+        emptyTLS: true
 
 nameOverride: "ansible"
 fullnameOverride: ""
