try to fix root problem in slides Dockerfile #2

--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -17,7 +17,11 @@ COPY slides/index.html.patch .
 
 RUN patch --forward --strip=1 index.html --input=index.html.patch \
  && npm install && npm run build -- css-themes \
- && sudo chown -R 1002150000:0 "/.npm"
+ && chown -R 1002150000:0 "/root/.npm"
+
+# Ensure the files are part of the Root-Group
+#RUN chgrp -R 0 ${APP_ROOT} && \
+#    chmod -R g=u ${APP_ROOT}
 
 EXPOSE 8000
 
