--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -12,11 +12,13 @@ RUN --mount=type=secret,id=gitlab_pullsecret PULLSECRET=$(cat /run/secrets/gitla
 
 WORKDIR reveal
 
+USER node
+
 COPY slides/ansible-techlab ./ansible-techlab
 COPY slides/index.html.patch .
 
 RUN patch --forward --strip=1 index.html --input=index.html.patch \
- && npm install && chgrp -R 0 /root/.npm && chmod -R g=u /root/.npm && npm run build -- css-themes
+ && npm install && npm run build -- css-themes
 
 EXPOSE 8000
 
