--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -12,7 +12,6 @@ RUN --mount=type=secret,id=gitlab_pullsecret PULLSECRET=$(cat /run/secrets/gitla
 
 WORKDIR reveal
 
-
 COPY slides/ansible-techlab ./ansible-techlab
 COPY slides/index.html.patch .
 
@@ -20,7 +19,12 @@ RUN patch --forward --strip=1 index.html --input=index.html.patch \
  && npm install && npm run build -- css-themes
 
 # Ensure the files are part of the Root-Group
-RUN chgrp -R 0 . && chmod -R g=u .
+RUN chgrp -R 0 /app/reveal \
+    && chmod -R g=u /app/reveal
+
+RUN chgrp -R 0 /root/.npm \
+    && chmod -R g=u /root/.npm \
+    && chmod o=x /root
 
 USER node
 EXPOSE 8000
