try to fix root problem in slides Dockerfile #12

--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -26,7 +26,7 @@ RUN chgrp -R 0 /root/.npm \
     && chmod -R g=u /root/.npm \
     && chmod o=x /root
 
-USER node
+#USER node
 EXPOSE 8000
 
 CMD ["npm", "start", "--", "--host=0.0.0.0"]
