try to fix root problem in slides Dockerfile #14

--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -16,9 +16,9 @@ COPY slides/ansible-techlab ./ansible-techlab
 COPY slides/index.html.patch .
 
 RUN patch --forward --strip=1 index.html --input=index.html.patch \
- && npm install && npm run build -- css-themes
+ && npm install && npm run build -- css-themes && npm cache clean --force
 
-RUN chown -R node.0 /root/.npm 
+#RUN chown -R node.0 /root/.npm 
 
 #USER node
 EXPOSE 8000
