--- a/yaml/slides_prod/slides_ingress_prod.yaml
+++ b/yaml/slides_prod/slides_ingress_prod.yaml
@@ -1,11 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  annotations:
-    kubernetes.io/ingress.class: nginx-public
   labels:
     app.kubernetes.io/instance: slides
     app.kubernetes.io/name: ansible-slides
+    public: "true"
   name: ansible-slides
   namespace: pitc-ansible-training-prod
 spec:
@@ -21,5 +20,4 @@ spec:
         path: /
         pathType: ImplementationSpecific
   tls:
-  - hosts:
-    - ansible-slides.puzzle.ch
+    - {} 
