--- a/yaml/training_prod/ingress_ch.yaml
+++ b/yaml/training_prod/ingress_ch.yaml
@@ -3,7 +3,6 @@ kind: Ingress
 metadata:
   annotations:
     field.cattle.io/publicEndpoints: '[{"addresses":["2a06:c00::37e9"],"port":443,"protocol":"HTTPS","serviceName":"pitc-ansible-training-prod:latest-ansible-puzzle","ingressName":"pitc-ansible-training-prod:latest-ansible-puzzle","hostname":"ansible.puzzle.ch","path":"/","allNodes":true}]'
-    kubernetes.io/ingress.class: nginx-public
     meta.helm.sh/release-name: latest
     meta.helm.sh/release-namespace: pitc-ansible-training-prod
   labels:
@@ -11,7 +10,8 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: ansible-puzzle
     app.kubernetes.io/version: 1.0.0
-    helm.sh/chart: acend-training-chart-0.1.2
+    helm.sh/chart: acend-training-chart-0.1.4
+    public: "true"
   name: latest-ansible-puzzle
   namespace: pitc-ansible-training-prod
 spec:
@@ -25,5 +25,4 @@ spec:
         path: /
         pathType: ImplementationSpecific
   tls:
-  - hosts:
-    - ansible.puzzle.ch
+    - {}
