--- a/.github/workflows/push-main-slides.yaml
+++ b/.github/workflows/push-main-slides.yaml
@@ -66,7 +66,7 @@ jobs:
         name: Deploy RevealJS Prod
         env:
           TRAINING_NAMESPACE: 'pitc-ansible-training-prod'
-          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_STG }}'
+          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_PROD }}'
           KUBE_URL: '${{ secrets.OPENSHIFT_API_URL }}'
         run: |
           kubectl rollout restart deployment/ansible-slides --server=$KUBE_URL --token=$KUBE_TOKEN --namespace $TRAINING_NAMESPACE
