--- a/.github/workflows/push-main.yaml
+++ b/.github/workflows/push-main.yaml
@@ -79,7 +79,7 @@ jobs:
           TRAINING_HELM_RELEASE: 'latest'
           TRAINING_NAMESPACE: 'pitc-ansible-training-prod'
           TRAINING_VERSION: '${{ github.sha }}'
-          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_STG }}'
+          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_PROD }}'
           KUBE_URL: '${{ secrets.OPENSHIFT_API_URL }}'
         run: |
           helm upgrade $TRAINING_HELM_RELEASE acend-training-chart --install --wait --kube-apiserver=$KUBE_URL --kube-token=$KUBE_TOKEN   --namespace=$TRAINING_NAMESPACE --set=app.name=$HELM_RELEASE --set=app.version=$TRAINING_VERSION --repo=https://acend.github.io/helm-charts/ --values=helm-chart/values_openshift.yaml --atomic
@@ -88,7 +88,7 @@ jobs:
         env:
           TRAINING_HELM_RELEASE: 'latest'
           TRAINING_NAMESPACE: 'pitc-ansible-training-prod'
-          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_STG }}'
+          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_PROD }}'
           KUBE_URL: '${{ secrets.OPENSHIFT_API_URL }}'
         run: |
           kubectl rollout restart deployment/$TRAINING_HELM_RELEASE-ansible-puzzle --server=$KUBE_URL --token=$KUBE_TOKEN --namespace $TRAINING_NAMESPACE
