rename slides test files to stg

--- a/yaml/slides_stg/slides_deployment_stg.yaml
+++ b/yaml/slides_stg/slides_deployment_stg.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       affinity: {}
       containers:
-      - image: quay.io/puzzle/ansible-training-slides:test
+      - image: quay.io/puzzle/ansible-training-slides:stg
         imagePullPolicy: Always
         name: slides
         ports:
