use correct url for PR env link

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -97,4 +97,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           message: |
            PR Environments: 
-           *  puzzle <https://ansible-pr-${{ github.event.pull_request.number }}.puzzle.ch>
+           *  puzzle <https://ansible-pr-${{ github.event.pull_request.number }}.ocp.cloudscale.puzzle.ch>
