debug values.yaml #1

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -7,7 +7,7 @@ acendTraining:
       image:
         repository: quay.io/puzzle/ansible-training
         pullPolicy: Always
-        tag: ""
+        tag: "schnuedli"
         tagsuffix: ""
       ingress:
         labels:
