fix boolean values and update ingress_de to new api version

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -12,11 +12,11 @@ acendTraining:
       ingress:
         labels:
           public: "true"
-        useDefaultSecret: "true"
+        useDefaultSecret: true
         appname: ansible
         domainmain: puzzle.ch
         domain: ocp.cloudscale.puzzle.ch
-        emptyTLS: "true"
+        emptyTLS: true
 
 nameOverride: "ansible"
 fullnameOverride: ""
