add deployment to openshift (#189)
* use test kubeconfig for openshift

* use kube token instead of kubeconfig

* typo #1

* typo #2

* add openshift api url

* debug helm upgrade command

* debug: try url directly

* debug: try url from secret again

* switch redeployment to openshift as well

* switch redeployment to openshift as well, fix token

* switch redeployment to openshift as well, fix server url

* switch helm values to openshift

* update the other actions as well to use openshift

* remove annotations from values.yml

* add emptyTLS parameter to values.yaml

* add public true label to ingress

* try to fix root problem in slides Dockerfile

* try to fix root problem in slides Dockerfile #2

* try to fix root problem in slides Dockerfile #3

* try to fix root problem in slides Dockerfile #4

* try to fix root problem in slides Dockerfile #5

* try to fix root problem in slides Dockerfile #6

* try to fix root problem in slides Dockerfile #7

* try to fix root problem in slides Dockerfile #8

* try to fix root problem in slides Dockerfile #9

* try to fix root problem in slides Dockerfile #10

* try to fix root problem in slides Dockerfile #11

* try to fix root problem in slides Dockerfile #12

* try to fix root problem in slides Dockerfile #13

* try to fix root problem in slides Dockerfile #14

* try to fix root problem in slides Dockerfile #15

* try to fix root problem in slides Dockerfile #16

* try to fix root problem in slides Dockerfile #17

* test slides change

* update slides yamls; rename helm values file; update techlab ingress yamls

* revert test changesin slides

* fix target ocp project for pushing prod

* update action PR comment

* add serviceaccoutn and rolebinding yamls; rename test to stg

* rename slides test files to stg

* tidy up debug stuff

* use correct url for PR env link

* rename values file back to defaut

* remove obsolte ingress_ch.yml

--- a/.github/workflows/pr-cleanup-slides.yaml
+++ b/.github/workflows/pr-cleanup-slides.yaml
@@ -1,4 +1,4 @@
-name: PRCleanup Slides Test
+name: PRCleanup Slides Stg
 on:
   pull_request:
     types: [closed]
@@ -6,7 +6,7 @@ on:
       - 'slides/**'
 
 jobs:
-  delete-slides-test:
+  delete-slides-stg:
     runs-on: 'ubuntu-latest'
     steps:
       - 
@@ -19,17 +19,10 @@ jobs:
         uses: azure/setup-kubectl@v3
         with:
           version: v1.21.2
-      - 
-        name: Create KUBECONFIG
-        env:
-          KUBE_CONFIG: '${{ secrets.KUBECONFIG_TEST }}'
-        run: |
-          mkdir -p $HOME/.kube
-          echo "$KUBE_CONFIG" > $HOME/.kube/config
 
       - name: Delete Tags on Quay
         id: delete_tags
         env:
           QUAYIO_API_TOKEN: '${{ secrets.QUAYIO_API_TOKEN }}'
         run: |
-          curl -X DELETE -H "Authorization: Bearer ${QUAYIO_API_TOKEN}" https://quay.io/api/v1/repository/puzzle/ansible-training/tag/test
+          curl -X DELETE -H "Authorization: Bearer ${QUAYIO_API_TOKEN}" https://quay.io/api/v1/repository/puzzle/ansible-training/tag/stg
