--- a/.github/workflows/build-slides.yaml
+++ b/.github/workflows/build-slides.yaml
@@ -1,4 +1,4 @@
-name: Build Slides for Training and Publish to Test Env
+name: Build Slides for Training and Publish to Stg Env
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
       - 'slides/**'
 
 jobs:
-  build-slides-test:
+  build-slides-stg:
     runs-on: ubuntu-latest
     steps:
       - 
@@ -28,7 +28,7 @@ jobs:
           username: ${{ secrets.QUAYIO_USERNAME }}
           password: ${{ secrets.QUAYIO_TOKEN }}
       - 
-        name: Build Slides Test
+        name: Build Slides 
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -37,12 +37,12 @@ jobs:
             "gitlab_pullsecret=${{ secrets.GITLAB_PULLSECRET }}"
           push: true
           tags: |
-            quay.io/puzzle/ansible-training-slides:test
+            quay.io/puzzle/ansible-training-slides:stg
       -
         name: Run vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'quay.io/puzzle/ansible-training-slides:test'
+          image-ref: 'quay.io/puzzle/ansible-training-slides:stg'
           format: 'table'
           output: 'trivy-results.txt'
           exit-code: '0'
@@ -61,16 +61,10 @@ jobs:
         with:
           version: v1.21.2
       - 
-        name: Create KUBECONFIG
+        name: Deploy RevealJS Stg
         env:
-          KUBE_CONFIG: '${{ secrets.KUBECONFIG_TEST }}'
+          TRAINING_NAMESPACE: 'pitc-ansible-training-stg'
+          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_STG }}'
+          KUBE_URL: '${{ secrets.OPENSHIFT_API_URL }}'
         run: |
-          mkdir -p $HOME/.kube
-          echo "$KUBE_CONFIG"
-          echo "$KUBE_CONFIG" > $HOME/.kube/config
-      - 
-        name: Deploy RevealJS Test
-        env:
-          TRAINING_NAMESPACE: 'pitc-ansible-training-test'
-        run: |
-          kubectl rollout restart deployment/ansible-slides --kubeconfig $HOME/.kube/config --namespace $TRAINING_NAMESPACE
+          kubectl rollout restart deployment/ansible-slides --server=$KUBE_URL --token=$KUBE_TOKEN --namespace $TRAINING_NAMESPACE
