--- a/.github/workflows/push-main.yaml
+++ b/.github/workflows/push-main.yaml
@@ -74,24 +74,21 @@ jobs:
         with:
           version: v1.21.2
       - 
-        name: Create KUBECONFIG
-        env:
-          KUBE_CONFIG: '${{ secrets.KUBECONFIG }}'
-        run: |
-          mkdir -p $HOME/.kube
-          echo "$KUBE_CONFIG" > $HOME/.kube/config
-      - 
         name: Deploy Helm Release
         env:
           TRAINING_HELM_RELEASE: 'latest'
           TRAINING_NAMESPACE: 'pitc-ansible-training-prod'
           TRAINING_VERSION: '${{ github.sha }}'
+          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_PROD }}'
+          KUBE_URL: '${{ secrets.OPENSHIFT_API_URL }}'
         run: |
-          helm upgrade $TRAINING_HELM_RELEASE acend-training-chart --install --wait --kubeconfig $HOME/.kube/config  --namespace=$TRAINING_NAMESPACE --set=app.name=$HELM_RELEASE --set=app.version=$TRAINING_VERSION --repo=https://acend.github.io/helm-charts/ --values=helm-chart/values.yaml --atomic
+          helm upgrade $TRAINING_HELM_RELEASE acend-training-chart --install --wait --kube-apiserver=$KUBE_URL --kube-token=$KUBE_TOKEN   --namespace=$TRAINING_NAMESPACE --set=app.name=$HELM_RELEASE --set=app.version=$TRAINING_VERSION --repo=https://acend.github.io/helm-charts/ --values=helm-chart/values.yaml --atomic
       - 
         name: Redeploy Deployments
         env:
           TRAINING_HELM_RELEASE: 'latest'
           TRAINING_NAMESPACE: 'pitc-ansible-training-prod'
+          KUBE_TOKEN: '${{ secrets.OPENSHIFT_SA_TOKEN_PROD }}'
+          KUBE_URL: '${{ secrets.OPENSHIFT_API_URL }}'
         run: |
-          kubectl rollout restart deployment/$TRAINING_HELM_RELEASE-ansible-puzzle --kubeconfig $HOME/.kube/config --namespace $TRAINING_NAMESPACE
+          kubectl rollout restart deployment/$TRAINING_HELM_RELEASE-ansible-puzzle --server=$KUBE_URL --token=$KUBE_TOKEN --namespace $TRAINING_NAMESPACE
