--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -10,12 +10,13 @@ acendTraining:
         tag: ""
         tagsuffix: ""
       ingress:
-        annotations: 
-          kubernetes.io/ingress.class: nginx-public
+        labels:
+          public: "true"
         useDefaultSecret: true
         appname: ansible
         domainmain: puzzle.ch
-        domain: k8s.puzzle.ch
+        domain: ocp.cloudscale.puzzle.ch
+        emptyTLS: true
 
 nameOverride: "ansible"
 fullnameOverride: ""
