--- a/yaml/slides_stg/slides_deployment_stg.yaml
+++ b/yaml/slides_stg/slides_deployment_stg.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/instance: slides
     app.kubernetes.io/name: ansible-slides
   name: ansible-slides
-  namespace: pitc-ansible-training-test
+  namespace: pitc-ansible-training-stg
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
@@ -24,14 +24,13 @@ spec:
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2021-10-28T13:43:44Z"
       labels:
         app.kubernetes.io/instance: slides
         app.kubernetes.io/name: ansible-slides
     spec:
       affinity: {}
       containers:
-      - image: quay.io/puzzle/ansible-training-slides
+      - image: quay.io/puzzle/ansible-training-slides:stg
         imagePullPolicy: Always
         name: slides
         ports:
