--- a/yaml/slides_stg/slides_ingress_stg.yaml
+++ b/yaml/slides_stg/slides_ingress_stg.yaml
@@ -1,16 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  annotations:
-    kubernetes.io/ingress.class: nginx-public
   labels:
     app.kubernetes.io/instance: slides
     app.kubernetes.io/name: ansible-slides
+    public: "true"
   name: ansible-slides
-  namespace: pitc-ansible-training-test
+  namespace: pitc-ansible-training-stg
 spec:
   rules:
-  - host: ansible-slides-test.puzzle.ch
+  - host: ansible-slides-stg.puzzle.ch
     http:
       paths:
       - backend:
@@ -21,5 +20,4 @@ spec:
         path: /
         pathType: ImplementationSpecific
   tls:
-  - hosts:
-    - ansible-slides-test.puzzle.ch
+    - {}
