--- a/yaml/training_prod/ingress_de.yaml
+++ b/yaml/training_prod/ingress_de.yaml
@@ -1,7 +1,7 @@
 ﻿kind: Ingress
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: latest-ansible-puzzle
+  name: latest-ansible-puzzle-de
   namespace: pitc-ansible-training-prod
   labels:
     app.kubernetes.io/name: ansible-puzzle
