--- a/yaml/training_prod/ingress_de.yaml
+++ b/yaml/training_prod/ingress_de.yaml
@@ -3,13 +3,18 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: latest-ansible-puzzle-de
   namespace: pitc-ansible-training-prod
+  annotations:
+    kubernetes.io/tls-acme: "true"
+    route.openshift.io/termination: edge 
   labels:
     app.kubernetes.io/name: ansible-puzzle
     app.kubernetes.io/version: 1.0.0
     public: "true"
 spec:
   tls:
-    - {}
+  - hosts:
+    - ansible.puzzle-itc.de 
+    secretName: ansible-puzzle-itc-de-secret
   rules:
     - host: ansible.puzzle-itc.de
       http:
