debug: try extra CMD in Dockerfile before starting npm

--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -23,5 +23,5 @@ RUN patch --forward --strip=1 index.html --input=index.html.patch \
 RUN chgrp -R 0 ${NPM_CONFIG_CACHE}
 
 EXPOSE 8000
-
+CMD ["whoami"]
 CMD ["npm", "start", "--", "--host=0.0.0.0"]
