--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -20,8 +20,8 @@ COPY slides/index.html.patch .
 RUN patch --forward --strip=1 index.html --input=index.html.patch \
  && npm install && npm run build -- css-themes
 
-RUN chgrp -R 0 ${NPM_CONFIG_CACHE}
+RUN whoami
+RUN chown -R $(id -u).0 ${NPM_CONFIG_CACHE}
 
 EXPOSE 8000
-CMD ["whoami"]
 CMD ["npm", "start", "--", "--host=0.0.0.0"]
