--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -23,4 +23,4 @@ RUN patch --forward --strip=1 index.html --input=index.html.patch \
 RUN chgrp -R 0 ${NPM_CONFIG_CACHE}
 
 EXPOSE 8000
-#CMD ["npm", "start", "--", "--host=0.0.0.0"]
+CMD ["npm", "start", "--", "--host=0.0.0.0"]
