Add command to remove .git on deployment (#196)
* Add command to remove .git on deployment

Gotta get rid of that directory or the bugbounty will keep reporting it...

* Update with different version of the same command

* rm somewhere else

---------

Co-authored-by: Lukas Grimm <grimm@puzzle.ch>

--- a/slides/Dockerfile
+++ b/slides/Dockerfile
@@ -10,7 +10,8 @@ RUN --mount=type=secret,id=gitlab_pullsecret PULLSECRET=$(cat /run/secrets/gitla
  && mv puzzle-theme/css/theme/puzzle.css reveal/css/theme/ \
  && mv puzzle-theme/css/theme/source/puzzle.scss reveal/css/theme/source/ \
  && mv puzzle-theme/css/theme/source/puzzle-imgs reveal/css/theme/source/ \
- && rm -rf puzzle-theme
+ && rm -rf puzzle-theme \
+ && rm -rf reveal/.git/
 
 WORKDIR reveal
 
@@ -22,6 +23,6 @@ RUN patch --forward --strip=1 index.html --input=index.html.patch \
 
 RUN chgrp -R 0 ${NPM_CONFIG_CACHE} \
  && chmod -R g=u ${NPM_CONFIG_CACHE}
-
+ 
 EXPOSE 8000
 CMD ["npm", "start", "--", "--host=0.0.0.0"]
