--- a/yaml/slides_stg/slides_route_stg.yaml
+++ b/yaml/slides_stg/slides_route_stg.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/instance: slides
     app.kubernetes.io/name: ansible-slides
     public: "true"
-  name: ansible-slides-dzhr5
+  name: ansible-slides
   namespace: pitc-ansible-training-stg
 spec:
   host: ansible-slides-stg.puzzle.ch
