Add ingressClass to ingress
Add ingressClass to ingress, to follow best practice.

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -12,6 +12,7 @@ acendTraining:
       podAnnotations:
         puzzle.ch/logtenant: general
       ingress:
+        ingressClassName: openshift-public
         labels:
           public: "true"
         useDefaultSecret: true
